--- a/trainbooks/CheXpert_train.ipynb
+++ b/trainbooks/CheXpert_train.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_out = '/home/users/jsoelter/models/chexpert/densenet/pain_lowres'\n",
+    "model_out = '/home/users/jsoelter/models/chexpert/densenet/pain_lowres3'\n",
     "\n",
     "if not os.path.exists(model_out):\n",
     "    os.makedirs(model_out)\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,31 +125,31 @@
     "    subset = {}, # Define subsetting of data\n",
     ")\n",
     "\n",
-    "transforms = {\n",
-    "    'ToPILImage': {},\n",
-    "    'Resize': {\n",
-    "        'size': 272 #smaller edege mapped to x\n",
-    "    },\n",
-    "    'RandomRotation': {\n",
+    "transforms = [\n",
+    "    ('ToPILImage', {}),\n",
+    "    ('Resize', {\n",
+    "        'size': 544\n",
+    "    }),\n",
+    "    ('RandomRotation', {\n",
     "        'degrees': 5\n",
-    "    },    \n",
-    "    'RandomCrop': {\n",
-    "        'size': (256, 256)\n",
-    "    },\n",
-    "    'Resize': {\n",
-    "        'size': 512\n",
-    "    },\n",
-    "    'ToTensor': {},\n",
-    "    'Normalize': {\n",
+    "    }),    \n",
+    "    ('RandomCrop', {\n",
+    "        'size': (512, 512)\n",
+    "    }),\n",
+    "    ('Resize', {\n",
+    "        'size': 136 #smaller edege mapped to x\n",
+    "    }),\n",
+    "    ('ToTensor', {}),\n",
+    "    ('Normalize', {\n",
     "        'mean': [0.485, 0.456, 0.406], #'mean': (0.5, 0.5, 0.5),\n",
     "        'std': [0.229, 0.224, 0.225]  #(0.5, 0.5, 0.5)\n",
-    "    },\n",
-    "}"
+    "    }),\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "6951.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,15 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC on None: 0.572\n",
-      "Crit on None: 0.780\n"
+      "AUC on None: 0.556\n",
+      "Crit on None: 0.691\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,28 +321,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 100 ->, train: 0.593, val internal : 0.568, auc select: 0.727, auc bench: 0.727\n",
-      "step 150 ->, train: 0.552, val internal : 0.557, auc select: 0.688, auc bench: 0.688\n",
-      "step 200 ->, train: 0.547, val internal : 0.556, auc select: 0.741, auc bench: 0.741\n",
-      "step 250 ->, train: 0.583, val internal : 0.551, auc select: 0.715, auc bench: 0.715\n",
-      "step 300 ->, train: 0.547, val internal : 0.552, auc select: 0.742, auc bench: 0.742\n",
-      "step 350 ->, train: 0.533, val internal : 0.554, auc select: 0.698, auc bench: 0.698\n",
-      "step 400 ->, train: 0.590, val internal : 0.552, auc select: 0.712, auc bench: 0.712\n",
-      "step 450 ->, train: 0.524, val internal : 0.550, auc select: 0.727, auc bench: 0.727\n",
-      "step 500 ->, train: 0.583, val internal : 0.553, auc select: 0.741, auc bench: 0.741\n",
-      "step 550 ->, train: 0.573, val internal : 0.552, auc select: 0.722, auc bench: 0.722\n",
-      "step 600 ->, train: 0.508, val internal : 0.551, auc select: 0.747, auc bench: 0.747\n",
-      "step 650 ->, train: 0.503, val internal : 0.554, auc select: 0.750, auc bench: 0.750\n",
-      "step 700 ->, train: 0.578, val internal : 0.550, auc select: 0.726, auc bench: 0.726\n",
-      "step 750 ->, train: 0.572, val internal : 0.553, auc select: 0.777, auc bench: 0.777\n",
-      "step 800 ->, train: 0.553, val internal : 0.549, auc select: 0.729, auc bench: 0.729\n",
-      "step 850 ->, train: 0.575, val internal : 0.551, auc select: 0.757, auc bench: 0.757\n"
+      "step 50 ->, train: 0.592, val internal : 0.562, auc select: 0.731, auc bench: 0.731\n",
+      "step 100 ->, train: 0.574, val internal : 0.551, auc select: 0.739, auc bench: 0.739\n",
+      "step 150 ->, train: 0.512, val internal : 0.544, auc select: 0.750, auc bench: 0.750\n",
+      "step 200 ->, train: 0.535, val internal : 0.547, auc select: 0.777, auc bench: 0.777\n",
+      "step 250 ->, train: 0.608, val internal : 0.543, auc select: 0.769, auc bench: 0.769\n",
+      "step 300 ->, train: 0.539, val internal : 0.542, auc select: 0.776, auc bench: 0.776\n",
+      "step 350 ->, train: 0.502, val internal : 0.538, auc select: 0.798, auc bench: 0.798\n",
+      "step 400 ->, train: 0.579, val internal : 0.538, auc select: 0.783, auc bench: 0.783\n",
+      "step 450 ->, train: 0.520, val internal : 0.539, auc select: 0.807, auc bench: 0.807\n",
+      "step 500 ->, train: 0.510, val internal : 0.536, auc select: 0.796, auc bench: 0.796\n",
+      "step 550 ->, train: 0.526, val internal : 0.536, auc select: 0.783, auc bench: 0.783\n",
+      "step 600 ->, train: 0.545, val internal : 0.534, auc select: 0.806, auc bench: 0.806\n",
+      "step 650 ->, train: 0.533, val internal : 0.532, auc select: 0.812, auc bench: 0.812\n",
+      "step 700 ->, train: 0.563, val internal : 0.534, auc select: 0.844, auc bench: 0.844\n",
+      "step 750 ->, train: 0.565, val internal : 0.531, auc select: 0.836, auc bench: 0.836\n",
+      "step 800 ->, train: 0.547, val internal : 0.529, auc select: 0.819, auc bench: 0.819\n",
+      "step 850 ->, train: 0.522, val internal : 0.530, auc select: 0.817, auc bench: 0.817\n",
+      "step 900 ->, train: 0.562, val internal : 0.530, auc select: 0.806, auc bench: 0.806\n",
+      "step 950 ->, train: 0.529, val internal : 0.532, auc select: 0.849, auc bench: 0.849\n",
+      "step 1000 ->, train: 0.558, val internal : 0.530, auc select: 0.810, auc bench: 0.810\n",
+      "step 1050 ->, train: 0.495, val internal : 0.527, auc select: 0.838, auc bench: 0.838\n",
+      "step 1100 ->, train: 0.523, val internal : 0.527, auc select: 0.801, auc bench: 0.801\n",
+      "step 1150 ->, train: 0.539, val internal : 0.530, auc select: 0.822, auc bench: 0.822\n",
+      "step 1200 ->, train: 0.510, val internal : 0.529, auc select: 0.812, auc bench: 0.812\n",
+      "step 1250 ->, train: 0.495, val internal : 0.527, auc select: 0.847, auc bench: 0.847\n",
+      "step 1300 ->, train: 0.515, val internal : 0.527, auc select: 0.827, auc bench: 0.827\n",
+      "step 1350 ->, train: 0.526, val internal : 0.524, auc select: 0.818, auc bench: 0.818\n",
+      "step 1400 ->, train: 0.567, val internal : 0.531, auc select: 0.792, auc bench: 0.792\n",
+      "step 1450 ->, train: 0.533, val internal : 0.527, auc select: 0.828, auc bench: 0.828\n",
+      "step 1500 ->, train: 0.531, val internal : 0.526, auc select: 0.822, auc bench: 0.822\n",
+      "step 1550 ->, train: 0.568, val internal : 0.525, auc select: 0.832, auc bench: 0.832\n",
+      "step 1600 ->, train: 0.541, val internal : 0.523, auc select: 0.824, auc bench: 0.824\n",
+      "step 1650 ->, train: 0.544, val internal : 0.525, auc select: 0.834, auc bench: 0.834\n",
+      "step 1700 ->, train: 0.507, val internal : 0.526, auc select: 0.829, auc bench: 0.829\n",
+      "step 1750 ->, train: 0.529, val internal : 0.532, auc select: 0.807, auc bench: 0.807\n",
+      "step 1800 ->, train: 0.532, val internal : 0.529, auc select: 0.838, auc bench: 0.838\n",
+      "step 1850 ->, train: 0.525, val internal : 0.524, auc select: 0.822, auc bench: 0.822\n",
+      "step 1900 ->, train: 0.578, val internal : 0.526, auc select: 0.808, auc bench: 0.808\n",
+      "step 1950 ->, train: 0.542, val internal : 0.523, auc select: 0.824, auc bench: 0.824\n",
+      "step 2000 ->, train: 0.531, val internal : 0.523, auc select: 0.814, auc bench: 0.814\n",
+      "step 2050 ->, train: 0.539, val internal : 0.521, auc select: 0.855, auc bench: 0.855\n",
+      "step 2100 ->, train: 0.524, val internal : 0.523, auc select: 0.820, auc bench: 0.820\n",
+      "step 2150 ->, train: 0.495, val internal : 0.523, auc select: 0.836, auc bench: 0.836\n",
+      "step 2200 ->, train: 0.573, val internal : 0.525, auc select: 0.825, auc bench: 0.825\n",
+      "step 2250 ->, train: 0.535, val internal : 0.521, auc select: 0.834, auc bench: 0.834\n",
+      "step 2300 ->, train: 0.587, val internal : 0.524, auc select: 0.842, auc bench: 0.842\n",
+      "step 2350 ->, train: 0.529, val internal : 0.529, auc select: 0.805, auc bench: 0.805\n",
+      "step 2400 ->, train: 0.485, val internal : 0.525, auc select: 0.773, auc bench: 0.773\n",
+      "step 2450 ->, train: 0.520, val internal : 0.523, auc select: 0.840, auc bench: 0.840\n",
+      "step 2500 ->, train: 0.549, val internal : 0.522, auc select: 0.840, auc bench: 0.840\n",
+      "step 2550 ->, train: 0.497, val internal : 0.529, auc select: 0.821, auc bench: 0.821\n",
+      "step 2600 ->, train: 0.493, val internal : 0.519, auc select: 0.814, auc bench: 0.814\n",
+      "step 2650 ->, train: 0.522, val internal : 0.524, auc select: 0.809, auc bench: 0.809\n",
+      "step 2700 ->, train: 0.543, val internal : 0.521, auc select: 0.845, auc bench: 0.845\n",
+      "step 2750 ->, train: 0.566, val internal : 0.520, auc select: 0.856, auc bench: 0.856\n",
+      "step 2800 ->, train: 0.515, val internal : 0.523, auc select: 0.814, auc bench: 0.814\n",
+      "step 2850 ->, train: 0.576, val internal : 0.523, auc select: 0.822, auc bench: 0.822\n",
+      "step 2900 ->, train: 0.553, val internal : 0.522, auc select: 0.828, auc bench: 0.828\n",
+      "step 2950 ->, train: 0.524, val internal : 0.527, auc select: 0.798, auc bench: 0.798\n",
+      "step 3000 ->, train: 0.498, val internal : 0.521, auc select: 0.817, auc bench: 0.817\n",
+      "step 3050 ->, train: 0.562, val internal : 0.524, auc select: 0.826, auc bench: 0.826\n",
+      "step 3100 ->, train: 0.550, val internal : 0.521, auc select: 0.857, auc bench: 0.857\n",
+      "step 3150 ->, train: 0.487, val internal : 0.523, auc select: 0.844, auc bench: 0.844\n",
+      "step 3200 ->, train: 0.492, val internal : 0.526, auc select: 0.816, auc bench: 0.816\n",
+      "step 3250 ->, train: 0.501, val internal : 0.519, auc select: 0.832, auc bench: 0.832\n",
+      "step 3300 ->, train: 0.521, val internal : 0.528, auc select: 0.801, auc bench: 0.801\n",
+      "step 3350 ->, train: 0.484, val internal : 0.521, auc select: 0.822, auc bench: 0.822\n",
+      "step 3400 ->, train: 0.554, val internal : 0.522, auc select: 0.819, auc bench: 0.819\n",
+      "step 3450 ->, train: 0.520, val internal : 0.520, auc select: 0.844, auc bench: 0.844\n",
+      "step 3500 ->, train: 0.575, val internal : 0.520, auc select: 0.850, auc bench: 0.850\n",
+      "step 3550 ->, train: 0.513, val internal : 0.521, auc select: 0.830, auc bench: 0.830\n",
+      "step 3600 ->, train: 0.517, val internal : 0.520, auc select: 0.842, auc bench: 0.842\n",
+      "step 3650 ->, train: 0.507, val internal : 0.521, auc select: 0.815, auc bench: 0.815\n",
+      "step 3700 ->, train: 0.534, val internal : 0.524, auc select: 0.806, auc bench: 0.806\n",
+      "step 3750 ->, train: 0.556, val internal : 0.520, auc select: 0.855, auc bench: 0.855\n",
+      "step 3800 ->, train: 0.521, val internal : 0.520, auc select: 0.827, auc bench: 0.827\n",
+      "step 3850 ->, train: 0.504, val internal : 0.521, auc select: 0.848, auc bench: 0.848\n",
+      "step 3900 ->, train: 0.519, val internal : 0.518, auc select: 0.835, auc bench: 0.835\n",
+      "step 3950 ->, train: 0.537, val internal : 0.520, auc select: 0.847, auc bench: 0.847\n",
+      "step 4000 ->, train: 0.515, val internal : 0.528, auc select: 0.818, auc bench: 0.818\n",
+      "step 4050 ->, train: 0.543, val internal : 0.519, auc select: 0.814, auc bench: 0.814\n",
+      "step 4100 ->, train: 0.556, val internal : 0.519, auc select: 0.822, auc bench: 0.822\n",
+      "step 4150 ->, train: 0.532, val internal : 0.521, auc select: 0.832, auc bench: 0.832\n",
+      "step 4200 ->, train: 0.487, val internal : 0.519, auc select: 0.836, auc bench: 0.836\n",
+      "step 4250 ->, train: 0.507, val internal : 0.520, auc select: 0.825, auc bench: 0.825\n",
+      "step 4300 ->, train: 0.503, val internal : 0.519, auc select: 0.835, auc bench: 0.835\n",
+      "step 4350 ->, train: 0.521, val internal : 0.521, auc select: 0.841, auc bench: 0.841\n",
+      "step 4400 ->, train: 0.506, val internal : 0.522, auc select: 0.838, auc bench: 0.838\n"
      ]
     }
    ],
    "source": [
     "accum_steps = 0\n",
     "batch_loss, batch_samples = 0, 0\n",
+    "lr = opt_param['lr']\n",
     "\n",
     "train_setup = ledger.setdefault('train_setup', {})\n",
     "train_setup[step] = {\n",
@@ -356,7 +429,7 @@
     "    'batch_split': batch_split\n",
     "}\n",
     "\n",
-    "while True:\n",
+    "while lr:\n",
     "    for x, y in train_loader:\n",
     "        \n",
     "        _ = model.train()\n",
@@ -367,8 +440,7 @@
     "\n",
     "        # Update learning-rate, including stop training if over.\n",
     "        lr = model_setup.get_lr(step, supports=supports, base_lr=opt_param['lr'])\n",
-    "        if lr is None:\n",
-    "            break\n",
+    "        if lr is None: break\n",
     "        for param_group in optim.param_groups:\n",
     "            param_group[\"lr\"] = lr\n",
     "\n",
@@ -434,7 +506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
