big update including confounding experiment

--- a/trainbooks/CheXpert_train.ipynb
+++ b/trainbooks/CheXpert_train.ipynb
@@ -34,6 +34,179 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_model = torchvision.models.densenet121(pretrained=True)\n",
+    "backbone = original_model.features\n",
+    "features = self.backbone(x)\n",
+    "out = F.relu(features, inplace=True)\n",
+    "out = F.adaptive_avg_pool2d(out, (1, 1))\n",
+    "out = torch.flatten(out, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = self.backbone(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BiT-M-R101x1.npz  BiT-M-R50x1.npz    BiT-M-R50x3.npz\n",
+      "BiT-M-R101x3.npz  BiT-M-R50x1.npz.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ~/models/BiT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "relu(input, inplace=False) -> Tensor\n",
+       "\n",
+       "Applies the rectified linear unit function element-wise. See\n",
+       ":class:`~torch.nn.ReLU` for more details.\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/miniconda3/lib/python3.7/site-packages/torch/nn/functional.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wget https://storage.googleapis.com/bit_models/BiT-M-R50x1.{npz|h5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Backbone(torch.nn.Module):\n",
+    "\n",
+    "    def __init__(self, name, flat=True):\n",
+    "        \n",
+    "        if name == 'densenet121':\n",
+    "            model = torchvision.models.densenet121(pretrained= (pretrained == 'imagenet'))\n",
+    "            self.backbone = model.features\n",
+    "            self.flatten = torch.nn.ReLU\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6144"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.module.body.block4.unit03.conv3.out_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bit_pytorch.models import ResNetV2, KNOWN_MODELS as BiTModels\n",
+    "from collections import OrderedDict\n",
+    "from torch import nn\n",
+    "\n",
+    "class ResNetV2_feature_extractor(ResNetV2):\n",
+    "    \n",
+    "    def __init__(self, block_units, width_factor, head_size=21843, zero_head=False):\n",
+    "        super().__init__(block_units, width_factor, head_size=21843, zero_head=False)\n",
+    "        self.pre_head = nn.Sequential(OrderedDict([\n",
+    "            ('gn', nn.GroupNorm(32, 2048*width_factor)),\n",
+    "            ('relu', nn.ReLU(inplace=True)),\n",
+    "            ('avg', nn.AdaptiveAvgPool2d(output_size=1))\n",
+    "        ]))\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.pre_head(self.body(self.root(x)))\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "\n",
+    "class BiT_MetaMixin(torch.nn.Module):\n",
+    "    \n",
+    "    def __init__(self, num_meta_data, backbone):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.backbone = backbone\n",
+    "        self.classifier =nn.Conv2d(self.backbone.body.block4.unit03.conv3.out_channels+num_meta_data, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+    "        \n",
+    "\n",
+    "    def forward(self, im, meta_data):\n",
+    "        \n",
+    "        img_feat = self.backbone(im)\n",
+    "        feat = torch.cat([img_feat, meta_data], 1)      \n",
+    "        pred = self.classifier(feat)\n",
+    "        \n",
+    "        return pred\n",
+    "    \n",
+    "m = BiT_MetaMixin(1, ResNetV2_feature_extractor([3, 4, 6, 3], 3, head_size=1, zero_head=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,21 +220,21 @@
    "outputs": [],
    "source": [
     "model_dict =  dict(\n",
-    "    #architecture = 'BiT-M-R50x3',\n",
-    "    architecture = 'densenet121',\n",
+    "    architecture = 'BiT-M-R50x3',\n",
+    "    #architecture = 'densenet121',\n",
     "    num_classes = 5,\n",
-    "    pretrained = 'imagenet', #'/home/users/jsoelter/models/chexpert/fullmeta_503/step05000.pt',\n",
+    "    pretrained = None, #'imagenet', #'/home/users/jsoelter/models/chexpert/fullmeta_503/step05000.pt',\n",
     "    fresh_head_weights = False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_out = '/home/users/jsoelter/models/chexpert/densenet/pain_lowres3'\n",
+    "model_out = '/home/users/jsoelter/models/chexpert/densenet/test'\n",
     "\n",
     "if not os.path.exists(model_out):\n",
     "    os.makedirs(model_out)\n",
@@ -103,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,10 +284,10 @@
     "    include_meta = [],\n",
     "    #include_meta = ['Sex', 'AP/PA', 'Frontal/Lateral'],\n",
     "    label_value_map = {\n",
-    "       0: 0.05,\n",
-    "       'nan': 0.1,\n",
+    "       0: 0.01,\n",
+    "       'nan': 0.05,\n",
     "       -1.: 0.5,\n",
-    "       1: 0.9\n",
+    "       1: 0.98\n",
     "    },\n",
     "    fill_hierachy = {\n",
     "        #'Enlarged Cardiomediastinum': ['Cardiomegaly'],\n",
@@ -128,16 +301,16 @@
     "transforms = [\n",
     "    ('ToPILImage', {}),\n",
     "    ('Resize', {\n",
-    "        'size': 544\n",
+    "        'size': 136 #smaller edege mapped to x\n",
     "    }),\n",
+    "    #('Resize', {\n",
+    "    #    'size': 544\n",
+    "    #}),\n",
     "    ('RandomRotation', {\n",
     "        'degrees': 5\n",
     "    }),    \n",
     "    ('RandomCrop', {\n",
-    "        'size': (512, 512)\n",
-    "    }),\n",
-    "    ('Resize', {\n",
-    "        'size': 136 #smaller edege mapped to x\n",
+    "        'size': (128, 128)\n",
     "    }),\n",
     "    ('ToTensor', {}),\n",
     "    ('Normalize', {\n",
@@ -149,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,22 +345,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6951.0"
+       "(223414, 19)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "real_batch_size = 32#128\n",
+    "data.meta_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64540"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.meta_df.Path.str.split('/').str.get(-3).nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_batch_size = 64#128\n",
     "batch_split = 1 #8 #number of forward pathes before optimization is performed \n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(train_data, batch_size=int(real_batch_size/batch_split), num_workers=8, shuffle=True, drop_last=False)\n",
@@ -207,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "supports = [-1, len(train_loader), int(1.5*len(train_loader)), int(2*len(train_loader))]#[3000, 7000, 9000, 10000]"
+    "supports = [-1, 2*len(train_loader), int(3*len(train_loader)), int(4*len(train_loader))]#[3000, 7000, 9000, 10000]"
    ]
   },
   {
@@ -251,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,18 +479,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AUC on None: 0.556\n",
-      "Crit on None: 0.691\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds, targets = evaluations.batch_prediction(model, valid_ext_loader)\n",
     "print(f'AUC on {train_on}: {evaluations.eval_auc(preds, targets, train_cols):.3f}')\n",
@@ -304,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,102 +509,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 50 ->, train: 0.592, val internal : 0.562, auc select: 0.731, auc bench: 0.731\n",
-      "step 100 ->, train: 0.574, val internal : 0.551, auc select: 0.739, auc bench: 0.739\n",
-      "step 150 ->, train: 0.512, val internal : 0.544, auc select: 0.750, auc bench: 0.750\n",
-      "step 200 ->, train: 0.535, val internal : 0.547, auc select: 0.777, auc bench: 0.777\n",
-      "step 250 ->, train: 0.608, val internal : 0.543, auc select: 0.769, auc bench: 0.769\n",
-      "step 300 ->, train: 0.539, val internal : 0.542, auc select: 0.776, auc bench: 0.776\n",
-      "step 350 ->, train: 0.502, val internal : 0.538, auc select: 0.798, auc bench: 0.798\n",
-      "step 400 ->, train: 0.579, val internal : 0.538, auc select: 0.783, auc bench: 0.783\n",
-      "step 450 ->, train: 0.520, val internal : 0.539, auc select: 0.807, auc bench: 0.807\n",
-      "step 500 ->, train: 0.510, val internal : 0.536, auc select: 0.796, auc bench: 0.796\n",
-      "step 550 ->, train: 0.526, val internal : 0.536, auc select: 0.783, auc bench: 0.783\n",
-      "step 600 ->, train: 0.545, val internal : 0.534, auc select: 0.806, auc bench: 0.806\n",
-      "step 650 ->, train: 0.533, val internal : 0.532, auc select: 0.812, auc bench: 0.812\n",
-      "step 700 ->, train: 0.563, val internal : 0.534, auc select: 0.844, auc bench: 0.844\n",
-      "step 750 ->, train: 0.565, val internal : 0.531, auc select: 0.836, auc bench: 0.836\n",
-      "step 800 ->, train: 0.547, val internal : 0.529, auc select: 0.819, auc bench: 0.819\n",
-      "step 850 ->, train: 0.522, val internal : 0.530, auc select: 0.817, auc bench: 0.817\n",
-      "step 900 ->, train: 0.562, val internal : 0.530, auc select: 0.806, auc bench: 0.806\n",
-      "step 950 ->, train: 0.529, val internal : 0.532, auc select: 0.849, auc bench: 0.849\n",
-      "step 1000 ->, train: 0.558, val internal : 0.530, auc select: 0.810, auc bench: 0.810\n",
-      "step 1050 ->, train: 0.495, val internal : 0.527, auc select: 0.838, auc bench: 0.838\n",
-      "step 1100 ->, train: 0.523, val internal : 0.527, auc select: 0.801, auc bench: 0.801\n",
-      "step 1150 ->, train: 0.539, val internal : 0.530, auc select: 0.822, auc bench: 0.822\n",
-      "step 1200 ->, train: 0.510, val internal : 0.529, auc select: 0.812, auc bench: 0.812\n",
-      "step 1250 ->, train: 0.495, val internal : 0.527, auc select: 0.847, auc bench: 0.847\n",
-      "step 1300 ->, train: 0.515, val internal : 0.527, auc select: 0.827, auc bench: 0.827\n",
-      "step 1350 ->, train: 0.526, val internal : 0.524, auc select: 0.818, auc bench: 0.818\n",
-      "step 1400 ->, train: 0.567, val internal : 0.531, auc select: 0.792, auc bench: 0.792\n",
-      "step 1450 ->, train: 0.533, val internal : 0.527, auc select: 0.828, auc bench: 0.828\n",
-      "step 1500 ->, train: 0.531, val internal : 0.526, auc select: 0.822, auc bench: 0.822\n",
-      "step 1550 ->, train: 0.568, val internal : 0.525, auc select: 0.832, auc bench: 0.832\n",
-      "step 1600 ->, train: 0.541, val internal : 0.523, auc select: 0.824, auc bench: 0.824\n",
-      "step 1650 ->, train: 0.544, val internal : 0.525, auc select: 0.834, auc bench: 0.834\n",
-      "step 1700 ->, train: 0.507, val internal : 0.526, auc select: 0.829, auc bench: 0.829\n",
-      "step 1750 ->, train: 0.529, val internal : 0.532, auc select: 0.807, auc bench: 0.807\n",
-      "step 1800 ->, train: 0.532, val internal : 0.529, auc select: 0.838, auc bench: 0.838\n",
-      "step 1850 ->, train: 0.525, val internal : 0.524, auc select: 0.822, auc bench: 0.822\n",
-      "step 1900 ->, train: 0.578, val internal : 0.526, auc select: 0.808, auc bench: 0.808\n",
-      "step 1950 ->, train: 0.542, val internal : 0.523, auc select: 0.824, auc bench: 0.824\n",
-      "step 2000 ->, train: 0.531, val internal : 0.523, auc select: 0.814, auc bench: 0.814\n",
-      "step 2050 ->, train: 0.539, val internal : 0.521, auc select: 0.855, auc bench: 0.855\n",
-      "step 2100 ->, train: 0.524, val internal : 0.523, auc select: 0.820, auc bench: 0.820\n",
-      "step 2150 ->, train: 0.495, val internal : 0.523, auc select: 0.836, auc bench: 0.836\n",
-      "step 2200 ->, train: 0.573, val internal : 0.525, auc select: 0.825, auc bench: 0.825\n",
-      "step 2250 ->, train: 0.535, val internal : 0.521, auc select: 0.834, auc bench: 0.834\n",
-      "step 2300 ->, train: 0.587, val internal : 0.524, auc select: 0.842, auc bench: 0.842\n",
-      "step 2350 ->, train: 0.529, val internal : 0.529, auc select: 0.805, auc bench: 0.805\n",
-      "step 2400 ->, train: 0.485, val internal : 0.525, auc select: 0.773, auc bench: 0.773\n",
-      "step 2450 ->, train: 0.520, val internal : 0.523, auc select: 0.840, auc bench: 0.840\n",
-      "step 2500 ->, train: 0.549, val internal : 0.522, auc select: 0.840, auc bench: 0.840\n",
-      "step 2550 ->, train: 0.497, val internal : 0.529, auc select: 0.821, auc bench: 0.821\n",
-      "step 2600 ->, train: 0.493, val internal : 0.519, auc select: 0.814, auc bench: 0.814\n",
-      "step 2650 ->, train: 0.522, val internal : 0.524, auc select: 0.809, auc bench: 0.809\n",
-      "step 2700 ->, train: 0.543, val internal : 0.521, auc select: 0.845, auc bench: 0.845\n",
-      "step 2750 ->, train: 0.566, val internal : 0.520, auc select: 0.856, auc bench: 0.856\n",
-      "step 2800 ->, train: 0.515, val internal : 0.523, auc select: 0.814, auc bench: 0.814\n",
-      "step 2850 ->, train: 0.576, val internal : 0.523, auc select: 0.822, auc bench: 0.822\n",
-      "step 2900 ->, train: 0.553, val internal : 0.522, auc select: 0.828, auc bench: 0.828\n",
-      "step 2950 ->, train: 0.524, val internal : 0.527, auc select: 0.798, auc bench: 0.798\n",
-      "step 3000 ->, train: 0.498, val internal : 0.521, auc select: 0.817, auc bench: 0.817\n",
-      "step 3050 ->, train: 0.562, val internal : 0.524, auc select: 0.826, auc bench: 0.826\n",
-      "step 3100 ->, train: 0.550, val internal : 0.521, auc select: 0.857, auc bench: 0.857\n",
-      "step 3150 ->, train: 0.487, val internal : 0.523, auc select: 0.844, auc bench: 0.844\n",
-      "step 3200 ->, train: 0.492, val internal : 0.526, auc select: 0.816, auc bench: 0.816\n",
-      "step 3250 ->, train: 0.501, val internal : 0.519, auc select: 0.832, auc bench: 0.832\n",
-      "step 3300 ->, train: 0.521, val internal : 0.528, auc select: 0.801, auc bench: 0.801\n",
-      "step 3350 ->, train: 0.484, val internal : 0.521, auc select: 0.822, auc bench: 0.822\n",
-      "step 3400 ->, train: 0.554, val internal : 0.522, auc select: 0.819, auc bench: 0.819\n",
-      "step 3450 ->, train: 0.520, val internal : 0.520, auc select: 0.844, auc bench: 0.844\n",
-      "step 3500 ->, train: 0.575, val internal : 0.520, auc select: 0.850, auc bench: 0.850\n",
-      "step 3550 ->, train: 0.513, val internal : 0.521, auc select: 0.830, auc bench: 0.830\n",
-      "step 3600 ->, train: 0.517, val internal : 0.520, auc select: 0.842, auc bench: 0.842\n",
-      "step 3650 ->, train: 0.507, val internal : 0.521, auc select: 0.815, auc bench: 0.815\n",
-      "step 3700 ->, train: 0.534, val internal : 0.524, auc select: 0.806, auc bench: 0.806\n",
-      "step 3750 ->, train: 0.556, val internal : 0.520, auc select: 0.855, auc bench: 0.855\n",
-      "step 3800 ->, train: 0.521, val internal : 0.520, auc select: 0.827, auc bench: 0.827\n",
-      "step 3850 ->, train: 0.504, val internal : 0.521, auc select: 0.848, auc bench: 0.848\n",
-      "step 3900 ->, train: 0.519, val internal : 0.518, auc select: 0.835, auc bench: 0.835\n",
-      "step 3950 ->, train: 0.537, val internal : 0.520, auc select: 0.847, auc bench: 0.847\n",
-      "step 4000 ->, train: 0.515, val internal : 0.528, auc select: 0.818, auc bench: 0.818\n",
-      "step 4050 ->, train: 0.543, val internal : 0.519, auc select: 0.814, auc bench: 0.814\n",
-      "step 4100 ->, train: 0.556, val internal : 0.519, auc select: 0.822, auc bench: 0.822\n",
-      "step 4150 ->, train: 0.532, val internal : 0.521, auc select: 0.832, auc bench: 0.832\n",
-      "step 4200 ->, train: 0.487, val internal : 0.519, auc select: 0.836, auc bench: 0.836\n",
-      "step 4250 ->, train: 0.507, val internal : 0.520, auc select: 0.825, auc bench: 0.825\n",
-      "step 4300 ->, train: 0.503, val internal : 0.519, auc select: 0.835, auc bench: 0.835\n",
-      "step 4350 ->, train: 0.521, val internal : 0.521, auc select: 0.841, auc bench: 0.841\n",
-      "step 4400 ->, train: 0.506, val internal : 0.522, auc select: 0.838, auc bench: 0.838\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accum_steps = 0\n",
     "batch_loss, batch_samples = 0, 0\n",
@@ -487,6 +585,13 @@
     "                )\n",
     "                json.dump(ledger, open(os.path.join(model_out, 'train_ledger.json'), 'w'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
