snapshot of hpc

--- a/trainbooks/CheXpert_train.ipynb
+++ b/trainbooks/CheXpert_train.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, glob, json\n",
+    "import os, glob\n",
+    "import json_tricks as json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -34,179 +35,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_model = torchvision.models.densenet121(pretrained=True)\n",
-    "backbone = original_model.features\n",
-    "features = self.backbone(x)\n",
-    "out = F.relu(features, inplace=True)\n",
-    "out = F.adaptive_avg_pool2d(out, (1, 1))\n",
-    "out = torch.flatten(out, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = self.backbone(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BiT-M-R101x1.npz  BiT-M-R50x1.npz    BiT-M-R50x3.npz\n",
-      "BiT-M-R101x3.npz  BiT-M-R50x1.npz.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls ~/models/BiT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "relu(input, inplace=False) -> Tensor\n",
-       "\n",
-       "Applies the rectified linear unit function element-wise. See\n",
-       ":class:`~torch.nn.ReLU` for more details.\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/miniconda3/lib/python3.7/site-packages/torch/nn/functional.py\n",
-       "\u001b[0;31mType:\u001b[0m      function\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "wget https://storage.googleapis.com/bit_models/BiT-M-R50x1.{npz|h5}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn.functional as F"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Backbone(torch.nn.Module):\n",
-    "\n",
-    "    def __init__(self, name, flat=True):\n",
-    "        \n",
-    "        if name == 'densenet121':\n",
-    "            model = torchvision.models.densenet121(pretrained= (pretrained == 'imagenet'))\n",
-    "            self.backbone = model.features\n",
-    "            self.flatten = torch.nn.ReLU\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6144"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.module.body.block4.unit03.conv3.out_channels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bit_pytorch.models import ResNetV2, KNOWN_MODELS as BiTModels\n",
-    "from collections import OrderedDict\n",
-    "from torch import nn\n",
-    "\n",
-    "class ResNetV2_feature_extractor(ResNetV2):\n",
-    "    \n",
-    "    def __init__(self, block_units, width_factor, head_size=21843, zero_head=False):\n",
-    "        super().__init__(block_units, width_factor, head_size=21843, zero_head=False)\n",
-    "        self.pre_head = nn.Sequential(OrderedDict([\n",
-    "            ('gn', nn.GroupNorm(32, 2048*width_factor)),\n",
-    "            ('relu', nn.ReLU(inplace=True)),\n",
-    "            ('avg', nn.AdaptiveAvgPool2d(output_size=1))\n",
-    "        ]))\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.pre_head(self.body(self.root(x)))\n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "\n",
-    "class BiT_MetaMixin(torch.nn.Module):\n",
-    "    \n",
-    "    def __init__(self, num_meta_data, backbone):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.backbone = backbone\n",
-    "        self.classifier =nn.Conv2d(self.backbone.body.block4.unit03.conv3.out_channels+num_meta_data, 1, kernel_size=(1, 1), stride=(1, 1))\n",
-    "        \n",
-    "\n",
-    "    def forward(self, im, meta_data):\n",
-    "        \n",
-    "        img_feat = self.backbone(im)\n",
-    "        feat = torch.cat([img_feat, meta_data], 1)      \n",
-    "        pred = self.classifier(feat)\n",
-    "        \n",
-    "        return pred\n",
-    "    \n",
-    "m = BiT_MetaMixin(1, ResNetV2_feature_extractor([3, 4, 6, 3], 3, head_size=1, zero_head=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,18 +51,26 @@
     "    architecture = 'BiT-M-R50x3',\n",
     "    #architecture = 'densenet121',\n",
     "    num_classes = 5,\n",
-    "    pretrained = None, #'imagenet', #'/home/users/jsoelter/models/chexpert/fullmeta_503/step05000.pt',\n",
+    "    pretrained = 'imagenet', #'/home/users/jsoelter/models/chexpert/fullmeta_503/step05000.pt',\n",
     "    fresh_head_weights = False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BIT\n"
+     ]
+    }
+   ],
    "source": [
-    "model_out = '/home/users/jsoelter/models/chexpert/densenet/test'\n",
+    "model_out = '/home/users/jsoelter/models/chexpert/dense/april_base7'\n",
     "\n",
     "if not os.path.exists(model_out):\n",
     "    os.makedirs(model_out)\n",
@@ -276,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +123,7 @@
     "       0: 0.01,\n",
     "       'nan': 0.05,\n",
     "       -1.: 0.5,\n",
-    "       1: 0.98\n",
+    "       1: 0.9\n",
     "    },\n",
     "    fill_hierachy = {\n",
     "        #'Enlarged Cardiomediastinum': ['Cardiomegaly'],\n",
@@ -300,29 +136,31 @@
     "\n",
     "transforms = [\n",
     "    ('ToPILImage', {}),\n",
-    "    ('Resize', {\n",
-    "        'size': 136 #smaller edege mapped to x\n",
-    "    }),\n",
     "    #('Resize', {\n",
-    "    #    'size': 544\n",
+    "    #    'size': 320 #smaller edege mapped to x\n",
     "    #}),\n",
+    "    ('Resize', {\n",
+    "        'size': 342\n",
+    "    }),\n",
     "    ('RandomRotation', {\n",
     "        'degrees': 5\n",
     "    }),    \n",
     "    ('RandomCrop', {\n",
-    "        'size': (128, 128)\n",
+    "        'size': (320, 320)\n",
     "    }),\n",
     "    ('ToTensor', {}),\n",
     "    ('Normalize', {\n",
-    "        'mean': [0.485, 0.456, 0.406], #'mean': (0.5, 0.5, 0.5),\n",
-    "        'std': [0.229, 0.224, 0.225]  #(0.5, 0.5, 0.5)\n",
+    "        #'mean': [0.485, 0.456, 0.406], \n",
+    "        'mean': (0.5, 0.5, 0.5),\n",
+    "        #'std': [0.229, 0.224, 0.225]  \n",
+    "        'std': (0.5, 0.5, 0.5)\n",
     "    }),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,52 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(223414, 19)"
+       "868.8125"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.meta_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64540"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.meta_df.Path.str.split('/').str.get(-3).nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real_batch_size = 64#128\n",
-    "batch_split = 1 #8 #number of forward pathes before optimization is performed \n",
+    "real_batch_size = 256#128\n",
+    "batch_split = 16 #8 #number of forward pathes before optimization is performed \n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(train_data, batch_size=int(real_batch_size/batch_split), num_workers=8, shuffle=True, drop_last=False)\n",
     "\n",
@@ -409,20 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = 'Adam'#'SGD'\n",
+    "opt = 'Adam'\n",
+    "#opt = 'SGD'\n",
     "opt_param = dict(\n",
-    "    lr = 1E-4,\n",
+    "    lr = 3E-4,\n",
     "    #momentum=0.9\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "supports = [-1, 2*len(train_loader), int(3*len(train_loader)), int(4*len(train_loader))]#[3000, 7000, 9000, 10000]"
+    "supports = [100, 2000, 3000, 3500, 4000]"
    ]
   },
   {
@@ -453,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,11 +273,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "crit = model_setup.maskedBCE(train_cols, device)"
+    "weighting = 'equal'\n",
+    "\n",
+    "if weighting == 'equal':\n",
+    "    w_pos = [] \n",
+    "    for c in data_setup['labels']:\n",
+    "        m = (train_data.dataset.meta_df[c]>0.5)\n",
+    "        w_pos.append(np.logical_not(m).sum()/m.sum())\n",
+    "else:\n",
+    "    w_pos = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'evaluations' from '/home/users/jsoelter/Code/ChestImageAI/utils/evaluations.py'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "importlib.reload(model_setup)\n",
+    "importlib.reload(evaluations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crit = model_setup.maskedBCE(train_cols, device, pos_weight=w_pos)"
    ]
   },
   {
@@ -479,9 +328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC on None: 0.500\n",
+      "Crit on None: 0.693\n"
+     ]
+    }
+   ],
    "source": [
     "preds, targets = evaluations.batch_prediction(model, valid_ext_loader)\n",
     "print(f'AUC on {train_on}: {evaluations.eval_auc(preds, targets, train_cols):.3f}')\n",
@@ -497,19 +355,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "eval_intervall = 50\n",
-    "save_intervall = 3500"
+    "save_intervall = 2000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 50 ->, train: 0.666, val internal : 0.674, auc bench: 0.76, 0.78, 0.85, 0.79, 0.81\n",
+      "step 100 ->, train: 0.656, val internal : 0.654, auc bench: 0.72, 0.77, 0.88, 0.81, 0.82\n",
+      "step 150 ->, train: 0.644, val internal : 0.657, auc bench: 0.78, 0.81, 0.90, 0.81, 0.81\n",
+      "step 200 ->, train: 0.668, val internal : 0.649, auc bench: 0.78, 0.83, 0.90, 0.59, 0.82\n",
+      "step 250 ->, train: 0.652, val internal : 0.642, auc bench: 0.76, 0.83, 0.89, 0.68, 0.84\n",
+      "step 300 ->, train: 0.647, val internal : 0.628, auc bench: 0.81, 0.84, 0.93, 0.62, 0.85\n",
+      "step 350 ->, train: 0.620, val internal : 0.624, auc bench: 0.80, 0.86, 0.92, 0.84, 0.88\n",
+      "step 400 ->, train: 0.611, val internal : 0.625, auc bench: 0.78, 0.87, 0.91, 0.77, 0.89\n"
+     ]
+    }
+   ],
    "source": [
     "accum_steps = 0\n",
     "batch_loss, batch_samples = 0, 0\n",
@@ -528,7 +401,7 @@
     "}\n",
     "\n",
     "while lr:\n",
-    "    for x, y in train_loader:\n",
+    "    for x, y, _ in train_loader:\n",
     "        \n",
     "        _ = model.train()\n",
     "        \n",
@@ -567,13 +440,14 @@
     "            # Evaluate \n",
     "            if (step % eval_intervall) == 0:\n",
     "                preds, targets = evaluations.batch_prediction(model, valid_ext_loader)\n",
-    "                auc_selection = evaluations.eval_auc(preds, targets, train_cols)\n",
-    "                benchmark_cols = [i in ['Consolidation',  'Cardiomegaly', 'Atelectasis', 'Pleural Effusion', 'Edema'] for i in data.targets] \n",
-    "                auc_bench = evaluations.eval_auc(preds, targets, benchmark_cols)\n",
-    "                ledger['external'].append((step-1, auc_selection))\n",
+    "                #auc_selection = evaluations.eval_auc(preds, targets, train_cols)\n",
+    "                #benchmark_cols = [i in ['Consolidation',  'Cardiomegaly', 'Atelectasis', 'Pleural Effusion', 'Edema'] for i in data.targets] \n",
+    "                auc_bench = evaluations.eval_auc_percol(preds, targets)\n",
+    "                ledger['external'].append([step-1].extend(auc_bench))\n",
     "                val = evaluations.eval_crit(model, valid_int_loader, crit)\n",
-    "                ledger['internal'].append((step-1, val))\n",
-    "                print(f'step {step} ->, train: {train_loss:.3f}, val internal : {val:.3f}, auc select: {auc_selection:.3f}, auc bench: {auc_bench:.3f}') # FULL: \n",
+    "                ledger['internal'].append((step-1, val.cpu().numpy()))\n",
+    "                score = ', '.join([f'{a:.2f}' for a in auc_bench])\n",
+    "                print(f'step {step} ->, train: {train_loss:.3f}, val internal : {val:.3f}, auc bench: ' + score) # FULL: \n",
     "\n",
     "            if (step % save_intervall) == 0:\n",
     "                torch.save({\n",
@@ -588,14 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +473,27 @@
     "    }, \n",
     "    os.path.join(model_out, f'step{step:05d}.pt')\n",
     ")\n",
-    "json.dump(ledger, open(os.path.join(model_out, 'train_ledger.json'), 'w'))"
+    "_ = json.dump(ledger, open(os.path.join(model_out, 'train_ledger.json'), 'w'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "step"
    ]
   },
   {
@@ -614,27 +501,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ledger['model'] = model_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.cuda.empty_cache()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
